CMF 1.6.3-beta (unreleased)

  Bug Fixes

    - DCWorkflow: Fixed errors and site breakage on GenericSetup import 
      of transitions with variable expressions set.  They were previously 
      being imported as text rather tha Expressions.


CMF 1.6.2 (2006/08/15)

  Bug Fixes

    - CMFCore.FSDTMLMethod: Add class-default '_owner', to prevent unintended
      acquisition of ownership (http://www.zope.org/Collectors/CMF/450)


CMF 1.6.2-beta (2006/08/08)

  Bug Fixes

    - CMFCore.CatalogTool: Added 'cmf_uid' method to IndexableObjectWrapper
      so that CMFUid UIDs are not acquired during indexing.
      (http://www.zope.org/Collectors/CMF/446)

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)

  Other

    - CMFUid: Removed remnants of CMFSetup. Made sure the extension profile is
      registered for ISiteRoot.

    - CMFDefault + CMFTopic: Made sure extension profiles are registered for
      ISiteRoot.


CMF 1.6.1 (2006/06/09)

  Other

    - Updated GenericSetup to trunk at revision 68556


CMF 1.6.1-beta (2006/06/03)

  Bug Fixes

    - Forward-ported fix for DCWorkflow global actions missing IDs
      (http://www.zope.org/Collectors/CMF/308).

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.interfaces._tools: Corrected the API given for 
      WorkflowDefinition.isActionSupported.
      (http://www.zope.org/Collectors/CMF/407)

    - IndexableObjectWrapper: Fixed list of provided interfaces.
      The interfaces declared for the wrapped object are no longer masked.

    - Got rid of zLOG in favor of python's logging module.


CMF 1.6.0 (2006/02/26)

  Bug Fixes
