@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<export-steps>
+
+ <export-step id="content"
+              handler="Products.CMFCore.exportimport.exportSiteStructure"
+              title="Content">
+  
+  
+  
+  Export the site's structure and content.
+ 
+ 
+ 
+ </export-step>
+
+</export-steps>
