@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<import-steps>
+
+ <import-step id="content" version="20050927-01"
+              handler="Products.CMFCore.exportimport.importSiteStructure"
+              title="Content">
+  <dependency step="toolset"/>
+  <!-- NYRFPT
+  <dependency step="catalog"/>
+    -->
+  <dependency step="typeinfo"/>
+  <dependency step="workflow"/>
+  
+  
+  
+  Import the site's structure and content.
+ 
+ 
+ 
+ </import-step>
+
+</import-steps>
