@@ -1,0 +1,6 @@
+html_document,Document
+stx_document,Document
+binary_file.tgz,File
+binary_image.png,Image
+a_link,Link
+some_news,News Item
