@@ -1,0 +1,13 @@
+Title: A Link
+Subject: 
+Publisher: 
+Description: 
+Contributors: 
+Effective_date: None
+Expiration_date: 2499-12-31 00:00:00
+Type: Link
+Format: text/url
+Language: 
+Rights: 
+
+http://palladion.com/
