@@ -1,0 +1,17 @@
+<html>
+ <head>
+ <title>HTML Document</title>
+ <meta name="Subject" content="" />
+ <meta name="Publisher" content="" />
+ <meta name="Description" content="" />
+ <meta name="Contributors" content="" />
+ <meta name="Effective_date" content="None" />
+ <meta name="Expiration_date" content="2499-12-31 00:00:00" />
+ <meta name="Type" content="Document" />
+ <meta name="Format" content="text/html" />
+ <meta name="Language" content="" />
+ <meta name="Rights" content="" />
+ <meta name="SafetyBelt" content="1127874889.26" />
+ </head>
+ <body><h1> A Sample HTML Document </h1></body>
+</html>
