@@ -1,0 +1,15 @@
+Title: Some News
+Subject: 
+Publisher: 
+Description: This is the lead paragraph, which is usually the same as
+  the Dublin Core "Description".
+Contributors: 
+Effective_date: None
+Expiration_date: 2499-12-31 00:00:00
+Type: News Item
+Format: text/plain
+Language: 
+Rights: 
+SafetyBelt: 1127875101.99
+
+The body of the news item goes here.
