@@ -1,0 +1,17 @@
+Title: Structured Text Document
+Subject: 
+Publisher: 
+Description: 
+Contributors: 
+Effective_date: None
+Expiration_date: 2499-12-31 00:00:00
+Type: Document
+Format: text/plain
+Language: 
+Rights: 
+SafetyBelt: 1127874919.05
+
+Structured Text for Fun and Profit
+
+  This is a "structured text" document.  It uses simple conventions, like those
+  found in plain-text e-mail, to indicate structure and formatting of text.
